Add access control service and document management system with proxy pattern